@@ -958,20 +958,18 @@ GC_API void GC_CALLBACK GC_ignore_warn_proc(char *, GC_word);
 /* Note that putting pointers in atomic objects or in           */
 /* non-pointer slots of "typed" objects is equivalent to        */
 /* disguising them in this way, and may have other advantages.  */
-#if defined(I_HIDE_POINTERS) || defined(GC_I_HIDE_POINTERS)
-  typedef GC_word GC_hidden_pointer;
-# define HIDE_POINTER(p) (~(GC_hidden_pointer)(p))
-# define REVEAL_POINTER(p) ((void *)HIDE_POINTER(p))
-  /* Converting a hidden pointer to a real pointer requires verifying   */
-  /* that the object still exists.  This involves acquiring the         */
-  /* allocator lock to avoid a race with the collector.                 */
-#endif /* I_HIDE_POINTERS */
+typedef GC_word GC_hidden_pointer;
+#define GC_HIDE_POINTER(p) (~(GC_hidden_pointer)(p))
+/* Converting a hidden pointer to a real pointer requires verifying     */
+/* that the object still exists.  This involves acquiring the           */
+/* allocator lock to avoid a race with the collector.                   */
+#define GC_REVEAL_POINTER(p) ((void *)GC_HIDE_POINTER(p))
 
-/* The GC-prefixed symbols are preferred for new code (I_HIDE_POINTERS, */
-/* HIDE_POINTER and REVEAL_POINTER remain for compatibility).           */
-#ifdef GC_I_HIDE_POINTERS
-# define GC_HIDE_POINTER(p) HIDE_POINTER(p)
-# define GC_REVEAL_POINTER(p) REVEAL_POINTER(p)
+#ifdef I_HIDE_POINTERS
+  /* This exists only for compatibility (the GC-prefixed symbols are    */
+  /* preferred for new code).                                           */
+# define HIDE_POINTER(p) GC_HIDE_POINTER(p)
+# define REVEAL_POINTER(p) GC_REVEAL_POINTER(p)
 #endif
 
 typedef void * (GC_CALLBACK * GC_fn_type)(void * /* client_data */);
