@@ -35,9 +35,6 @@
 #endif
 
 #ifndef GC_MARK_H
-# ifndef GC_H
-#   define GC_I_HIDE_POINTERS /* to get GC_HIDE_POINTER() and friends */
-# endif
 # include "../gc_mark.h"
 #endif
 
